- added to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ java_pid27314.hprof
 java_pid39602.hprof
 java_pid97124.hprof
 java_pid98109.hprof
+java_pid180.hprof
+java_pid88993.hprof
+local.properties
