--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@ kotlin.version=1.8.0
 agp.version=7.4.0-beta02
 compose.version=1.3.1
 kotlin.mpp.androidSourceSetLayoutVersion=2
-allowAllTargetConfiguration=false
+#allowAllTargetConfiguration=false
